# bios740-topic2

./: .gitignore  DATA.md  README.md  SESSION_ARCHIVE_2026-05-02.md  pyproject.toml
docs/: assignment_topic2.md  assignment_topic2_cn.md  autodl_demo_deploy_cn.md  demo_console_handoff.md  demo_console_handoff_cn.md  extension_b_low_resource_transfer_autodl.md  gpu_resource_estimate.md  spert_eval_autodl_cn.md
outputs/: adkg_eda_summary.json  mdkg_eda_summary.json  resource_estimate.json
report/: neurips6_report_draft.md  neurips6_report_draft_submission_copy.md  report.md  report_submission_copy.md  report_submission_trimmed.md
scripts/: analyze_llm_errors.py  autodl_deploy_demo.sh  autodl_run.md  convert_brat_sources.py  convert_to_spert.py  download_data.sh  download_zenodo_data.sh  eda.py  estimate_resources.py  eval_spert_dev100_autodl.sh  eval_spert_test_autodl.sh  evaluate_predictions.py  generate_diagrams.py  generate_llm_artifacts.py  generate_report_artifacts.py  make_shared_schema_spert.py  make_spert_configs.py  probe_llm_provider.py  run_all.sh  run_extension_b_low_resource_transfer_autodl.sh  run_llm_annotation_experiment.py  run_mdkg_llm_providers.md  sample_adkg_dev_for_llm.py  sample_dev_for_llm.py  setup_conda_env.sh  summarize_extension_b_transfer.py  summarize_llm_results.py  summarize_spert_logs.py  train_adkg_full.sh  train_adkg_smoke.sh  train_mdkg_full.sh  train_spert.sh  train_transfer_adkg_to_mdkg_shared.sh  train_transfer_mdkg_to_adkg_shared.sh
tests/: fixtures.py  fixtures_tiny_dataset.json  test_brat_convert.py  test_data_io.py  (+16 more)
(+140 files in other folders)
