[project]
name = "bios740-topic2"
version = "0.1.0"
description = "BIOS 740 Topic 2 biomedical NER and relation extraction pipeline for ADKG and MDKG."
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "matplotlib>=3.7",
    "pysbd>=0.3.4",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
